# plugify-module-lua

./: .gitattributes  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  README_ru.md  plugify-module-lua.json  plugify-module-lua.pmodule.in
.github/workflows/: cmake-multiple-platform.yml
conda/: bld.bat  build.sh  meta.yaml.example
generator/: generator.py
lib/: plugify.lua
src/: module.cpp  module.hpp
test/cross_call_worker/: cross_call_master.lua  cross_call_worker.lua  cross_call_worker.pplugin
